*** Revision history for Dancer2-Plugin-JSManager ***

0.011     2017-12-27 00:58:42-05:00 America/New_York

0.010     2017-12-26 22:07:06-05:00 America/New_York

0.009     2017-12-26 21:58:29-05:00 America/New_York

0.008     2017-12-22 12:28:04-05:00 America/New_York
Change to development notes in doc

0.007     2017-12-22 11:42:01-05:00 America/New_York

0.006     2017-12-22 11:31:31-05:00 America/New_York
minor doc fixes

0.005     2017-12-22 11:16:56-05:00 America/New_York
Additional documenation fixes

0.004     2017-12-22 11:05:11-05:00 America/New_York
More documenation fixes

0.003     2017-12-22 10:52:16-05:00 America/New_York

0.002     2017-12-22 10:50:14-05:00 America/New_York

0.001     2017-12-22 10:36:09-05:00 America/New_York
Initial commit