@@ -1,4 +1,7 @@
-*** Revision history for Dancer2-Plugin-JSManager ***
+*** Revision history for {{$dist->name}} ***
+
+{{$NEXT}}
+add tests
 
 0.011     2017-12-27 00:58:42-05:00 America/New_York
 
